    radius for the spheres -- possibly even zero.
  - planes3d() could fail to draw the plane if it intersected a
    vertex of the bounding box of the scene.
  - The configure script has been updated.
  - In Shiny, controllers like rglMouse() did not automatically
    link to an rglwidget().
  - The functions in the tkrgl package have been moved into rgl.
  - Demo tests are suppressed when run with the rgl null device.
  - The anaglyph() function in the "stereo" demo now prints
    information about failed pixel reads.
  - Included textures have been compressed (and in some cases
    repaired).
  - The tests of the demos have been moved to inst/slowTests so that
    running them is optional (and the CRAN checks will go faster).
    
0.100.47

  - Fixed a bug in readOBJ that affected reading texture coordinates.
  - rgl.pixels(), rgl.snapshot() and snapshot3d() now read from the
    back buffer, which should increase reliability.
  - demo(stereo) now uses plot.raster() rather than image().
  
0.100.50

  - Rewrote the initialization code to deal with problems
  related to indirect GLX and Xvfb.
  - Added ?rgl.init help topic to describe initialization
  issues.
  - Added sanity check to setting of par3d("windowRect")

0.100.53

  - Fixed bug in plot3d.rglscene that caused restored subscenes to 
    ignore the mouse.
  - Changed rgl.attrib(id, "normals") so the normals will be returned
    whether or not the object is lit.  (Suggestion of Tyler 
    Morgan-Wall)
  - The labels used in rglwidget() are now independent of set.seed(),
    using code borrowed from Shiny for our own private RNG.
  - getr3dDefaults() now gets values from rgl::r3dDefaults
    if they are not present in the user's r3dDefaults list.
  - bgplot3d() now uses the background colour from argument
    bg.color (defaulting to the background color from
    getr3dDefaults()) rather than always choosing white.
  - next3d() no longer messes up when a user changes active
    subscenes.